--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
   </head>
 
   <body>
+    <div class="div-nero"></div>
     <video class="knockVideo" autoplay playsinline src="assets/open1.mp4"></video>
     <video class="openVideo" autoplay playsinline src="assets/openTot.mp4"></video>
     <video class="close1Video" autoplay playsinline src="assets/close1.mp4"></video>
     <video class="riddleVideo" autoplay playsinline src="assets/idleFilastroka.mp4"></video>
     <video class="idleVideo" autoplay playsinline src="assets/idleIntera.mp4"></video>
     <video class="winVideo" autoplay playsinline src="assets/closingWin.mp4"></video>
+    <video class="loseVideo" autoplay playsinline src="assets/closingLost.mp4"></video>
 
     <!-- <video class="idle1Video" autoplay playsinline src="assets/idle1.mp4"></video>
     <video class="idle2Video" autoplay playsinline src="assets/idle2.mp4"></video>
